framework for lige

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openlogprobs import extract_logprobs, ToyModel\n",
-    "toy_model = ToyModel(300, temperature = 0.1)\n"
+    "toy_model = ToyModel(50, temperature = 0.1)\n"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "    vocab_size = model.vocab_size\n",
     "\n",
     "    if alpha is None:\n",
-    "        alpha = 1.5/vocab_size\n",
+    "        alpha = 3/vocab_size\n",
     "    \n",
     "    A= np.ones((vocab_size,vocab_size))*bias\n",
     "    np.fill_diagonal(A, 0)\n",
@@ -162,94 +162,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([  0.        ,  14.21235455,  14.11789647,  21.21195584,\n",
-      "        17.6592015 ,  -8.04776482,  14.38040166,   6.37945744,\n",
-      "        26.18420964,  11.1466754 , -11.07514998,  19.6152479 ,\n",
-      "         5.45964417,   9.45129818,   9.07388934,  17.5740089 ,\n",
-      "        24.5189179 ,  25.0290923 ,  12.31695952,   5.74785449,\n",
-      "        10.40125629,  21.23637098,  20.16969217,  24.06020675,\n",
-      "        14.45950833,   5.23269334,  13.9124567 ,  11.741489  ,\n",
-      "        -4.63197528,  20.37258693,  15.76936562,  15.62014544,\n",
-      "        35.48963617,  17.80791735,  10.1836834 ,  22.77172284,\n",
-      "        22.95124671,  15.93203257,   2.39592703,  24.37113081,\n",
-      "        20.33242521,  20.89949817,  23.94160922,  10.50965579,\n",
-      "        16.80836015,   5.03827036,  25.26534754,  24.64198741,\n",
-      "        38.96736392,  10.88542631,  28.20597114,  11.84615297,\n",
-      "        18.53158314,  21.18203135,  21.00455992,   7.78498325,\n",
-      "        16.72930807,  22.75879165,  21.29732514,   4.03277179,\n",
-      "        25.37476048,  20.31925439,  28.8862936 ,  15.84682282,\n",
-      "        18.55560889,  19.58809999,  30.93574299,  14.76830446,\n",
-      "        21.56231065,  12.63776748,  11.94521286,   1.44970565,\n",
-      "        21.65242317,   4.07069063,  10.80136681,  21.08497936,\n",
-      "        24.97425676,  11.66224709, -10.80375885,   0.59349899,\n",
-      "        -0.44143006,   8.36714493,  29.45795175,  35.18457921,\n",
-      "        21.19601552,  19.35826281,  26.4647801 ,   8.06894049,\n",
-      "        13.43593881,  12.42724981,   7.68407378,  15.11598848,\n",
-      "        19.89061113, -13.60298236,   7.77060534,   8.14545485,\n",
-      "        15.40309818,   5.80304944,   4.41748495,  12.71156488,\n",
-      "        20.24801689,   6.67972734,   6.91710049,  22.44430569,\n",
-      "        12.29840422,  12.67382332,  22.26212465,  17.90482933,\n",
-      "        11.17495048,  30.97087725,  16.5170721 ,  21.54749008,\n",
-      "         1.65829725,   7.45615183,   3.60331656,  12.00465728,\n",
-      "        19.19287157,  -0.84215145,  34.80203249,   5.79059054,\n",
-      "        -0.95384445,  20.59412679,  12.69782351,  19.01776703,\n",
-      "         3.77304107,  10.15173883,  18.55711993,  14.48724065,\n",
-      "         1.2883631 ,  19.02440937,  -0.17890247,   1.36831706,\n",
-      "        27.6432523 ,  16.35598728,  17.10380948,   1.26221915,\n",
-      "         7.91948746,   8.67785447,  15.19584388,  17.1223201 ,\n",
-      "        10.85809316,  15.17084499,  13.90018474,  20.31429828,\n",
-      "         6.99920294,  28.6930121 ,  11.6189784 ,  23.33393122,\n",
-      "        13.46887109,   7.21657619,  20.78798651,  20.04596306,\n",
-      "        -1.63581867,  13.8904133 ,  15.16755683,   2.66193551,\n",
-      "         3.4970264 ,  13.30627692,  24.58243709,  12.62531238,\n",
-      "        18.16023877,  22.82960186,   1.36202938,  26.08134768,\n",
-      "        29.03328601,  17.42479536,  14.35789873,  22.81943751,\n",
-      "        -7.89051573,  23.48526176,  26.13027466,   3.89053385,\n",
-      "         2.12165447,  15.37973758,   8.0930741 ,  16.11537227,\n",
-      "         1.1595771 ,   7.01417218,  23.81819881,  -4.25046062,\n",
-      "         4.72265777,  25.55656163,  12.42387287,  25.95015497,\n",
-      "         6.8089492 ,  22.95339117,  23.31198503,  22.97599544,\n",
-      "        25.50124946,  18.42950689,  33.92367555,  41.25920605,\n",
-      "        -3.4165811 ,  24.14155978, -12.76193376,  22.71755558,\n",
-      "        23.75936096,  27.20235346,   7.7029714 ,  27.56658494,\n",
-      "        27.88387527,  15.02646673,  10.50672116,   4.97842578,\n",
-      "        -5.52645512,  24.02931724,  25.8144379 ,  14.10352584,\n",
-      "        11.03131382,  10.06370384,  11.44117186,   7.88098301,\n",
-      "        24.24514492,   4.4957503 ,   2.65562305,   8.86484986,\n",
-      "         8.08362144,   8.57917417,  18.64986499,   1.99805505,\n",
-      "        11.63138696,  20.93570436,  20.47940077,  13.67628759,\n",
-      "        -7.61557568,  -6.04860132,   5.42776069,  28.87785097,\n",
-      "        17.63773283,  12.18247646,  16.59818279,  25.95277218,\n",
-      "        15.52120159,  -4.7323899 ,  14.8063931 ,  12.73940023,\n",
-      "        18.56960994,  11.35847147,  21.02370466,  15.9310144 ,\n",
-      "        24.02266581,  15.79784825,  14.41259185,  12.2017094 ,\n",
-      "        30.23365136,  12.63899677,   1.18643937,  -2.14981458,\n",
-      "         5.84687801,  14.59654076,  -2.54735525,   9.09350295,\n",
-      "        12.05850065,   2.18233166,  11.99987884,  -1.24259505,\n",
-      "         3.41051973,   7.09416794,  -4.5440392 ,  21.36352624,\n",
-      "        29.91864106,   6.19881709,  25.44186046,  22.43883613,\n",
-      "        17.85933534,   1.86451223,  -2.33100759,  15.84393988,\n",
-      "         4.45642681,  13.00958548,  24.25971299,   7.79848581,\n",
-      "        15.21031681,  12.58875436,  20.10927147,  17.77373109,\n",
-      "         6.27095786,  18.83563085,  13.72220626,  17.69729887,\n",
-      "        23.12349444,  17.01581163,  16.21582718,  16.92899522,\n",
-      "        25.0529611 ,   6.97913553,   7.30916103,  10.71208371,\n",
-      "        12.75132301,  13.60098534,  24.59546126,  12.51921591,\n",
-      "        16.08060855,  21.4535966 ,  13.03820198,   4.2007445 ,\n",
-      "        37.36395412, -13.72896305,  11.24998958,   9.54782506]), 4863)\n",
-      "1.3161878805452905e-06\n"
+      "(array([  0.        ,  -6.99698511,  -1.24736871,   2.5886118 ,\n",
+      "         4.75573823,   3.10086134,  -6.34992261,  16.31493607,\n",
+      "        18.65999375,  19.48400762,   1.34442467,   1.85165294,\n",
+      "       -11.39167662,   4.46838568, -12.25736526,   2.16882331,\n",
+      "         9.06834282,   2.56058515,  15.79252016,  -3.02199703,\n",
+      "        11.1027017 ,  -9.16033147,  -3.83973458,   1.80589375,\n",
+      "         0.59702574,   6.53946759,  -5.00775715,   0.42244262,\n",
+      "       -12.13747953,   1.3878143 ,  -3.64863005,   4.40056103,\n",
+      "        -1.08496221,   5.98173807,   2.01912256, -18.80795657,\n",
+      "         1.8693636 ,  -8.52560021,  13.9249722 , -10.21194642,\n",
+      "       -16.27406227,  -6.66875803,   3.65629035,  14.07079186,\n",
+      "        -5.42563652,  -3.31070311,  11.4867617 , -10.5215994 ,\n",
+      "         2.61490003,  -9.24724964]), 337)\n",
+      "2.145137702571631e-06\n"
      ]
     }
    ],
    "source": [
-    "faster_logprobs = much_faster_exact_logprobs(toy_model, \"\", alpha = 0.005,bias=100, eps = 1e-5, use_transitivity=False)\n",
+    "faster_logprobs = much_faster_exact_logprobs(toy_model, \"\", alpha = 0.08,bias=100, eps = 1e-5, use_transitivity=True)\n",
     "print (faster_logprobs)\n",
     "diff = toy_model.logits - faster_logprobs[0]\n",
     "diff -= diff[0]\n",
